Compets/2023/2023_StanRobotix_Betabot/build/tmp/compileFrcUserProgramLinuxathenaReleaseExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/pragm/OneDrive/Bureau/Stan-Robotix-Source/Compets/2023/2023_StanRobotix_Betabot/build/tmp/compileFrcUserProgramLinuxathenaReleaseExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramLinuxathenaReleaseExecutableFrcUserProgramCpp.
compiling Autos.cpp failed.
In file included from C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\commands\Autos.cpp:5:
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\include/commands/Autos.h:18:25: error: expected ')' before '*' token
   18 |   AutoCmd(RobotContainer *iRobotContainer);
      |          ~              ^~
      |                         )
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\include/commands/Autos.h:44:3: error: 'SubLimelight' does not name a type
   44 |   SubLimelight *  mSubLimelight = nullptr;
      |   ^~~~~~~~~~~~
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\commands\Autos.cpp:10:1: error: no declaration matches 'AutoCmd::AutoCmd(RobotContainer*)'
   10 | AutoCmd::AutoCmd(RobotContainer * iRobotContainer)
      | ^~~~~~~
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\include/commands/Autos.h:15:7: note: candidates are: 'constexpr AutoCmd::AutoCmd(AutoCmd&&)'
   15 | class AutoCmd
      |       ^~~~~~~
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\include/commands/Autos.h:15:7: note:                 'constexpr AutoCmd::AutoCmd(const AutoCmd&)'
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\include/commands/Autos.h:15:7: note:                 'AutoCmd::AutoCmd()'
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\include/commands/Autos.h:15:7: note: 'class AutoCmd' defined here
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\commands\Autos.cpp: In member function 'void AutoCmd::Init()':
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\commands\Autos.cpp:32:21: error: 'mRobotContainer' was not declared in this scope; did you mean 'RobotContainer'?
   32 |    mSubDriveTrain = mRobotContainer->getSubDriveTrain();
      |                     ^~~~~~~~~~~~~~~
      |                     RobotContainer
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\commands\Autos.cpp:33:4: error: 'mSubLimelight' was not declared in this scope
   33 |    mSubLimelight = mRobotContainer->getSubLimelight();
      |    ^~~~~~~~~~~~~

compiling SubArm.cpp successful.
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\subsystems\SubArm.cpp: In member function 'void SubArm::PosDown()':
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\subsystems\SubArm.cpp:14:83: warning: 'ControlType' is deprecated: Use CANSparkMax::ControlType instead [-Wdeprecated-declarations]
   14 |     mPIDArmController.SetReference(ArmConstants::kPositionDown, rev::ControlType::kSmartMotion);
      |                                                                                   ^~~~~~~~~~~~
In file included from C:\Users\pragm\.gradle\caches\transforms-3\7b740c0741bb8cdef9845c28157b4867\transformed\REVLib-cpp-2023.1.3-headers/rev/CANPIDController.h:45,
                 from C:\Users\pragm\.gradle\caches\transforms-3\7b740c0741bb8cdef9845c28157b4867\transformed\REVLib-cpp-2023.1.3-headers/rev/CANSparkMax.h:52,
                 from C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\include/subsystems/SubArm.h:9,
                 from C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\subsystems\SubArm.cpp:5:
C:\Users\pragm\.gradle\caches\transforms-3\7b740c0741bb8cdef9845c28157b4867\transformed\REVLib-cpp-2023.1.3-headers/rev/ControlType.h:36:67: note: declared here
   36 | enum class WPI_DEPRECATED("Use CANSparkMax::ControlType instead") ControlType {
      |                                                                   ^~~~~~~~~~~
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\subsystems\SubArm.cpp:14:35: warning: 'virtual rev::REVLibError rev::SparkMaxPIDController::SetReference(double, rev::ControlType, int, double, rev::CANPIDController::ArbFFUnits)' is deprecated: Use SetReference(double, CANSparkMax::ControlType, int, double, SparkMaxPIDController::ArbFFUnits) instead [-Wdeprecated-declarations]
   14 |     mPIDArmController.SetReference(ArmConstants::kPositionDown, rev::ControlType::kSmartMotion);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from C:\Users\pragm\.gradle\caches\transforms-3\7b740c0741bb8cdef9845c28157b4867\transformed\REVLib-cpp-2023.1.3-headers/rev/CANSparkMax.h:59:
C:\Users\pragm\.gradle\caches\transforms-3\7b740c0741bb8cdef9845c28157b4867\transformed\REVLib-cpp-2023.1.3-headers/rev/SparkMaxPIDController.h:127:17: note: declared here
  127 |     REVLibError SetReference(
      |                 ^~~~~~~~~~~~
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\subsystems\SubArm.cpp: In member function 'void SubArm::PosUp()':
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\subsystems\SubArm.cpp:19:81: warning: 'ControlType' is deprecated: Use CANSparkMax::ControlType instead [-Wdeprecated-declarations]
   19 |     mPIDArmController.SetReference(ArmConstants::kPositionUp, rev::ControlType::kSmartMotion);
      |                                                                                 ^~~~~~~~~~~~
C:\Users\pragm\.gradle\caches\transforms-3\7b740c0741bb8cdef9845c28157b4867\transformed\REVLib-cpp-2023.1.3-headers/rev/ControlType.h:36:67: note: declared here
   36 | enum class WPI_DEPRECATED("Use CANSparkMax::ControlType instead") ControlType {
      |                                                                   ^~~~~~~~~~~
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\subsystems\SubArm.cpp:19:35: warning: 'virtual rev::REVLibError rev::SparkMaxPIDController::SetReference(double, rev::ControlType, int, double, rev::CANPIDController::ArbFFUnits)' is deprecated: Use SetReference(double, CANSparkMax::ControlType, int, double, SparkMaxPIDController::ArbFFUnits) instead [-Wdeprecated-declarations]
   19 |     mPIDArmController.SetReference(ArmConstants::kPositionUp, rev::ControlType::kSmartMotion);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\pragm\.gradle\caches\transforms-3\7b740c0741bb8cdef9845c28157b4867\transformed\REVLib-cpp-2023.1.3-headers/rev/SparkMaxPIDController.h:127:17: note: declared here
  127 |     REVLibError SetReference(
      |                 ^~~~~~~~~~~~

compiling RobotContainer.cpp failed.
In file included from C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\RobotContainer.cpp:10:
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\include/commands/Autos.h:44:3: error: 'SubLimelight' does not name a type
   44 |   SubLimelight *  mSubLimelight = nullptr;
      |   ^~~~~~~~~~~~
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\RobotContainer.cpp: In member function 'frc2::CommandPtr RobotContainer::GetAutonomousCommand()':
C:\Users\pragm\OneDrive\Bureau\Stan-Robotix-Source\Compets\2023\2023_StanRobotix_Betabot\src\main\cpp\RobotContainer.cpp:37:10: error: 'autos' has not been declared
   37 |   return autos::ExampleAuto(&m_subsystem);
      |          ^~~~~

compiling Robot.cpp successful.

compiling SubDriveTrain.cpp successful.

compiling ExampleCommand.cpp successful.

compiling ExampleSubsystem.cpp successful.

compiling SubEjector.cpp successful.

compiling SubIMU.cpp successful.

Finished compileFrcUserProgramLinuxathenaReleaseExecutableFrcUserProgramCpp, see full log file:///C:/Users/pragm/OneDrive/Bureau/Stan-Robotix-Source/Compets/2023/2023_StanRobotix_Betabot/build/tmp/compileFrcUserProgramLinuxathenaReleaseExecutableFrcUserProgramCpp/output.txt.
